Bug 1528496 - Introduce EncodedHeaderW() using ParseEncodedHeaderW(). r=alta88